Add new Axel headshot images and new refsheet

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -38,6 +38,17 @@
     <h2>My art</h2>
 
     <img
+      src="images/axel-new-refsheet.png"
+      width="600px"
+      height="100%"
+      alt="Axel refsheet"
+    />
+
+    <p>
+      <small class="caption">Axel refsheet</small>
+    </p>
+
+    <img
       src="images/axel-refsheet.png"
       width="600px"
       height="100%"
@@ -94,6 +105,11 @@
       <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
         Open Font License 1.1
       </a>
+    </p>
+
+    <p>
+      "Axel refsheet" © MymeType 2025 -
+      <a href="licenses/general/CC-BY-4.0.txt"> CC BY 4.0 </a>
     </p>
 
     <p>
