--- a/src/index.html
+++ b/src/index.html
@@ -138,8 +138,8 @@
     </p>
 
     <p>
-      Old Axel headshot header images are licensed under
-      <a href="licenses/general/CC-BY-SA-4.0.txt"> CC BY-SA 4.0 </a>
+      Axel headshot header images are licensed under
+      <a href="licenses/general/CC-BY-4.0.txt"> CC BY 4.0 </a>
     </p>
 
     <p>
