--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       <img id="axelHead" src="images/axel-mono-head.png" alt="Axel headshot" />
     </button>
 
-    <p tag="warning">WARNING: Development of the website on this platform has been abandoned and will be continued over at Nekoweb. Please go to <a href="https://mymetype.nekoweb.org>mymetype.nekoweb.org</a>!</p>
+    <p id="warning">WARNING: Development of the website on this platform has been abandoned and will be continued over at Nekoweb. Please go to <a href="https://mymetype.nekoweb.org>mymetype.nekoweb.org</a>!</p>
     
     <h1>MymeType - マイムタイプ - /maɪmtaɪp/</h1>
 
